# esp32s3-squeezelite-n16r8

./: .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  LICENSE  README.md  README.pl.md
esphome_flash/: README.md  manifest.json
source/: CMakeLists.txt  build_native.ps1  build_with_env.ps1  flash_native.ps1  flash_with_env.ps1  generate_debug_scripts.cmake  monitor_native.ps1  monitor_with_env.ps1  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
source/components+/display/: SSD1675.c  display.c
source/components+/esp_http_server/: osal.h
source/components+/led_strip/: led_strip.h  led_vu.c
source/components+/platform_config/: config.h
source/components+/platform_console/: cmd_i2ctools.c  cmd_system.c
source/components+/raop/: util.c
source/components+/services/: accessors.c  audio_controls.c  audio_controls.h  buttons.c  gpio_exp.c  gpio_exp.h  messaging.h  monitor.c  monitor.h
source/components+/spotify/: Shim.cpp
source/components+/squeezelite/: equalizer.c  helix-aac.c
source/components+/tools/: platform_esp32.h
source/components+/wifi-manager/: CMakeLists.txt  http_server_handlers.c  network_driver_DM9051.c  network_driver_W5500.c  network_ethernet.c  network_manager.c  network_manager.h  network_services.h  network_status.c
source/components+/wifi-manager+/: network_manager_handlers.c  network_wifi.c
source/components/display/: display.h
source/components/esp_http_server/: CMakeLists.txt
source/main/: Kconfig.projbuild  esp_app_main.c  idf_component.yml  platform_esp32.h
web_flash/: README.md  index.html  manifest.json
(+41 files in other folders)
